--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/Giacche18/MyVideoChatApp/issues"
   },
-  "homepage": "https://github.com/Giacche18/MyVideoChatApp#readme"
+  "homepage": "https://github.com/Giacche18/MyVideoChatApp#readme",
+  "dependencies": {
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "peer": "^0.6.1",
+    "peerjs": "^1.3.2",
+    "socket.io": "^4.2.0",
+    "uuid": "^8.3.2"
+  }
 }
