add a script to start the server

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My video chat app to keep people in touch :D",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "start:dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
